# omopcloudetl_core

./: .pre-commit-config.yaml  LICENSE  NOTICE  README.md  codecov.yml  documentation.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  publish.yml
.omop_cache/: cache.db
docs/: index.md
src/my_python_project/: __init__.py
src/omopcloudetl_core/: __init__.py  discovery.py  exceptions.py  logging.py  main.py  sql_tools.py
src/omopcloudetl_core/abstractions/: __init__.py  connections.py  generators.py  orchestrators.py  secrets.py
src/omopcloudetl_core/compilation/: compiler.py  metadata.py
src/omopcloudetl_core/config/: manager.py  models.py
src/omopcloudetl_core/models/: dml.py  metrics.py  workflow.py
src/omopcloudetl_core/specifications/: manager.py  models.py
tests/: test_core_infrastructure.py  test_discovery.py  test_exceptions.py  test_logging.py  test_main.py  test_sql_tools.py  test_sql_tools_edge_cases.py
tests/abstractions/: test_connections.py  test_generators.py  test_orchestrators.py  test_secrets.py
tests/compilation/: test_compiler.py  test_metadata.py
tests/config/: __init__.py  test_config_models.py  test_manager.py  test_models.py
tests/models/: test_dml.py  test_metrics.py  test_workflow.py
tests/specifications/: test_manager.py  test_models.py
