[tool.poetry]
name = "omopcloudetl_core"
version = "0.1.0"
description = "This package is the foundation of the OmopCloudEtl ecosystem. It defines the core abstractions, data models (Configuration, DML, Workflow), and the compilation logic."
authors = ["Gowtham A Rao <gowtham.rao@scientific-informatics.com>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "omopcloudetl_core", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
loguru = "^0.7.2"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
PyYAML = "*"
Jinja2 = "*"
sqlparse = "*"
colorama = "*"
networkx = "*"
tenacity = ">=8.0.0"
requests = "*"
diskcache = "*"
importlib-metadata = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
ruff = "*"
mypy = "*"
requests-mock = "*"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "omopcloudetl_core"
version = "0.1.0"
description = "This package is the foundation of the OmopCloudEtl ecosystem. It defines the core abstractions, data models (Configuration, DML, Workflow), and the compilation logic."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@scientific-informatics.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/omopcloudetl_core"
Repository = "https://github.com/CoReason-AI/omopcloudetl_core"
Documentation = "https://github.com/CoReason-AI/omopcloudetl_core"
