[tool.poetry]
name = "omopcloudetl_core"
version = "0.1.0"
description = "This package is the foundation of the OmopCloudEtl ecosystem. It defines the core abstractions, data models (Configuration, DML, Workflow), and the compilation logic."
authors = ["Gowtham A Rao <gowtham.rao@scientific-informatics.com>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "omopcloudetl_core", from = "src"}]
homepage = "https://github.com/CoReason-AI/omopcloudetl_core"
repository = "https://github.com/CoReason-AI/omopcloudetl_core"
documentation = "https://github.com/CoReason-AI/omopcloudetl_core"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">=3.12, <3.15"
pydantic = "^2.0"
pydantic-settings = "^2.0"
PyYAML = "^6.0"
Jinja2 = "^3.0"
sqlparse = "^0.5.0"
colorama = "^0.4.0"
networkx = "^3.0"
tenacity = "^8.0.0"
requests = "^2.0"
diskcache = "^5.0"
importlib-metadata = "^7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
pytest-mock = "^3.0"
mypy = "^1.0"
requests-mock = "^1.0"
types-PyYAML = "^6.0"
types-requests = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
